--- a/grid.html
+++ b/grid.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <nav class="nav">
-            <div class="nav1"><a href="Index.html">Flex &nbsp; </a></div><div class="nav2"> + <a href="grid.html">Grid</a></div>
+            <div class="nav1"><a href="index.html">Flex &nbsp; </a></div><div class="nav2"> + <a href="grid.html">Grid</a></div>
         </nav>
     </header>
     <main class="main">
